# Termtalk

./: .env  .env.example  .si.json  Dockerfile.server  LICENSE  README.md  docker-compose.yml  pyproject.toml  termtalk.db
.github/workflows/: main.yml  python-publish.yml
cli/: config.py  main.py
cli/commands/: auth.py  chat.py  config_cmd.py  friends.py  users.py
cli/network/: client.py
cli/ui/: chat_ui.py  theme.py
server/: config.py  main.py
server/api/: files.py  friends.py  messages.py  rooms.py  routes.py  users.py
server/auth/: auth.py
server/database/: db.py
server/websocket/: manager.py
termtalk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/cli/: test_cli.py
tests/server/: test_api.py
