[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termtalk"
version = "1.0.0"
description = "Terminal-based communication platform — chat globally from your CLI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "TermTalk Contributors" }
]
keywords = ["chat", "terminal", "cli", "messaging", "websocket", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Terminals",
]
requires-python = ">=3.10"

dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-jose>=3.3.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.1.2",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
termtalk = "cli.main:main"
termtalk-server = "server.main:run"

[project.urls]
Homepage = "https://github.com/termtalk/termtalk"
Documentation = "https://termtalk.readthedocs.io"
Repository = "https://github.com/termtalk/termtalk"
Issues = "https://github.com/termtalk/termtalk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cli", "server"]
omit = ["tests/*"]
